@@ -1,5 +1,10 @@
 2006-08-25  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add text/x-ocaml as a mime-type for OCaml
+	files (Closes: #7836)
+
+2006-08-25  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: add application/x-debian-package as an alias
 	for application/x-deb, as used by Apache, spotted by Gustavo
 	J. A. M. Carneiro <gjc@inescporto.pt> (Closes: #6303)
